# RemoteJoy

./: .gitignore  CMakeLists.txt  README.md
RemoteJoy/: CMakeLists.txt
RemoteJoy/app/: CMakeLists.txt
RemoteJoy/app/rjClient/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
RemoteJoy/app/rjHost/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
RemoteJoy/include/: Version.h
RemoteJoy/include/IWindows/: iwindows_xinput_wrapper.h
RemoteJoy/src/: CMakeLists.txt
RemoteJoy/src/IWindows/: CMakeLists.txt  iwindows_xinput_wrapper.cpp
