get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(MODULE_NAME ${DIR_NAME})

FILE(GLOB ${MODULE_NAME}_GLBHDR ../../include/${MODULE_NAME}/*.h)
FILE(GLOB ${MODULE_NAME}_HDR *.h)
LIST(APPEND ${MODULE_NAME}_HDR ${${MODULE_NAME}_GLBHDR})
FILE(GLOB ${MODULE_NAME}_SRC *.cpp)

qt5_wrap_cpp(${MODULE_NAME}_MOC ${${MODULE_NAME}_HDR})
add_library(${MODULE_NAME} ${${MODULE_NAME}_SRC} ${${MODULE_NAME}_MOC})
qt5_use_modules(${MODULE_NAME} Core)
